--- a/working proj/proj2.html
+++ b/working proj/proj2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
         </div>
         <div class="text">
             <h1>A TASTE THAT HEALS THE SOUL AND FEELS LIKE HOME</h1>
-            <p>Home-cooked meals have a unique ability to heal the soul, providing comfort and nourishment that store-bought food often lacks. At Lavida Bistro, the art of home cooking is celebrated, blending fresh ingredients with love and care. Each dish is crafted to evoke memories of family gatherings and the warmth of a home kitchen. The rich aromas and flavors of Lavida Bistro's meals bring a sense of peace and happiness, reminding us of the simple joys in life. In a world full of fast-paced living, Lavida Bistro offers a sanctuary where the soul can be restored one delicious bite at a time.</p>
+            <p>Home-cooked meals have a unique ability to heal the soul, providing comfort and nourishment that store-bought food often lacks. At Lavida Bistro, the art of home cooking is celebrated, blending fresh ingredients with love and care. Each dish is crafted to evoke memories of family gatherings and the warmth of a home kitchen. The rich aromas and flavors of Lavida Bistro's meals bring a sense of peace and happiness, reminding us of the simple joys in life. In a world full of fast-paced living, Lavida Bistro offers a sanctuary where the soul can restored one delicious bite at a time.</p>
             <a href="projmenu.html" class="cta-button">Book Now</a> 
         </div>
     </div>
